cm4all-workshop (6.0.10) unstable; urgency=low

  * spawn: support MOUNT_HOME inside MOUNT_EMPTY
  * ping: set type=JOB

 --   

cm4all-workshop (6.0.9) unstable; urgency=low

  * merge release 5.5

 -- Max Kellermann <mk@cm4all.com>  Sun, 23 Oct 2022 17:31:50 +0200

cm4all-workshop (6.0.8) unstable; urgency=low

  * spawn: fix SIGBUS crash on ARM64 due to misaligned stack

 -- Max Kellermann <mk@cm4all.com>  Wed, 05 Oct 2022 17:50:02 +0200

cm4all-workshop (6.0.7) unstable; urgency=low

  * translation: add packet WRITE_FILE

 -- Max Kellermann <mk@cm4all.com>  Wed, 21 Sep 2022 10:25:18 +0200

cm4all-workshop (6.0.6) unstable; urgency=low

  * spawn: failure to create systemd scope is fatal

 -- Max Kellermann <mk@cm4all.com>  Wed, 24 Aug 2022 08:44:41 +0200

cm4all-workshop (6.0.5) unstable; urgency=low

  * spawn: fix bind mount on files

 -- Max Kellermann <mk@cm4all.com>  Fri, 15 Jul 2022 14:23:34 +0200

cm4all-workshop (6.0.4) unstable; urgency=low

  * spawn: fix inotify busy loop
  * spawn: fix CRC miscalculation bug

 -- Max Kellermann <mk@cm4all.com>  Wed, 13 Jul 2022 11:09:40 +0200

cm4all-workshop (6.0.3) unstable; urgency=low

  * spawn: fix memory limit setup
  * spawn: support percent memory limits
  * spawn: use inotify to watch cgroup memory limits

 -- Max Kellermann <mk@cm4all.com>  Wed, 29 Jun 2022 12:31:31 +0200

cm4all-workshop (6.0.2) unstable; urgency=low

  * workshop: fix bug in CPU usage calculation
  * translation: add packet CHDIR
  * spawn: don't inherit capabilities to launched processes

 -- Max Kellermann <mk@cm4all.com>  Fri, 24 Jun 2022 10:40:45 +0200

cm4all-workshop (6.0.1) unstable; urgency=low

  * fix crash if no "workshop" partition is configured
  * workshop: record CPU usage
  * workshop: add control channel comand "spawn"
  * spawn: use pidfd
  * spawn: allow path components to exist already
  * spawn: drop unnecessary capabilities
  * spawn: use CLONE_INTO_CGROUP